Increased animation/transition duration and fixed footer width on smaller screen resolution

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -214,18 +214,18 @@
         }
 
         .add {
-            @include animation(addTile, .5s) {
+            @include animation(addTile, 1s) {
                 0% { transform: scale(.7);}
                 100% { transform: scale(1);}
             }
         };
 
         .move {
-            transition: all .3s ease;
+            transition: all 1s ease;
         }
 
         .merge {
-            @include animation(mergeTiles, .3s) {
+            @include animation(mergeTiles, 1s) {
                 0% { transform: scale(1.5);}
                 100% { transform: scale(1);}
         }
@@ -236,9 +236,11 @@
 
 .footer {
     position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 100%;
     bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    justify-content: center;
 
     .footer__link {
         text-decoration: none;
